# bauh

./: .gitignore  AppImageBuilder.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  app_qt.py  install.py  pyproject.toml  requirements.txt  run.sh  sandbox_installer.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  suggest-a-new-appimage-application-to-the-database.md
arch/: register_app.py
aur/: bauh-tray  bauh.desktop  bauh_tray.desktop  copy_icons.py  desktop_entry.py  panel_entry.py  register_app.py  tray_entry.py
bauh/: __init__.py  app.py  app_args.py  context.py  manage.py  stylesheet.py  tray.py
bauh/api/: constants.py  exception.py  http.py  paths.py  scaling.py  user.py
bauh/cli/: __init__.py  app.py  cli_args.py  controller.py
bauh/commons/: boot.py  category.py  config.py  custom_types.py  html.py  internet.py  regex.py  resource.py  singleton.py  suggestions.py  system.py  util.py  version_util.py  view_utils.py
bauh/component/: github.py  manager.py  requirements.py
bauh/components/: github.py  manager.py
bauh/core/: config.py  constants.py  controller.py  disk.py  extensions.py  gems.py  model.py  resource.py  system.py  worker.py
bauh/desktop/: bauh.desktop  bauh_tray.desktop
bauh/util/: cache.py  disk.py  html.py  logs.py  memory.py  resource.py  util.py
core/: controller.py  flatpak.py  model.py  resource.py  updater.py  util.py
flatpak/: com.github.vinifmor.bauh.json
fpakman/: __init__.py  app.py  app_args.py
fpakman/core/: constants.py  disk.py  (+9 more)
snap/: snapcraft.yaml
tests/: __init__.py
(+303 files in other folders)
